[package]
name = "n2t"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enumflags2 = "0.7.7"
strum = "0.25.0"
strum_macros = "0.25.0"
lazy_static = "1.4.0"
prettytable-rs = "0.10.0"
num_enum = "0.7.0"
num_enum_derive = "0.7.0"
concat-string = "1.0.1"

[dev-dependencies]
serial_test = "2.0.0"